2003-03-07  Corinna Vinschen  <corinna@vinschen.de>

	* winsup.api/known_bugs.tcl: Remove fsync01, setregid01 and setreuid01
	from list of known bugs.

2003-02-19  Vaclav Haisman  <V.Haisman@sh.cvut.cz>

	* winsup.api/crlf.c: Fix C signed/unsigned compare warning.
	* winsup.api/mmaptest01.c: Ditto.
	* winsup.api/ltp/chmod01.c: Ditto.
	* winsup.api/ltp/fork04.c: Ditto.
	* winsup.api/ltp/lseek03.c: Ditto.
	* winsup.api/ltp/lseek06.c: Ditto.
	* winsup.api/ltp/lseek07.c: Ditto.
	* winsup.api/ltp/lseek08.c: Ditto.
	* winsup.api/ltp/mmap001.c: Ditto.
	* winsup.api/ltp/mmap02.c: Ditto.
	* winsup.api/ltp/mmap03.c: Ditto.
	* winsup.api/ltp/mmap04.c: Ditto.
	* winsup.api/ltp/mmap05.c: Ditto.
	* winsup.api/ltp/mmap06.c: Ditto.
	* winsup.api/ltp/mmap07.c: Ditto.
	* winsup.api/ltp/mmap08.c: Ditto.
	* winsup.api/ltp/pipe11.c: Ditto.
	* winsup.api/ltp/poll01.c: Ditto.
	* winsup.api/ltp/sync02.c: Ditto.   
	* winsup.api/ltp/times03.c: Ditto.
	* winsup.api/ltp/umask03.c: Ditto.
	* winsup.api/ltp/getpgid01.c: Remove unused obsolete include.
	* winsup.api/ltp/getpgid02.c: Ditto.

2003-02-08  Christopher Faylor  <cgf@redhat.com>

	* winsup.api/winsup.exp (ws_spawn): Tweak slightly to work with tcl
	8.4.1.

2003-02-07  Christopher Faylor  <cgf@redhat.com>

	* libltp/lib/parse_opts.c: Deal with C warnings.
	* winsup.api/pthread/cancel12.c: Ditto.
	* winsup.api/winsup.exp: Don't use -g3.

2003-02-04  Thomas Pfaff  <tpfaff@gmx.net>

	* winsup.api/pthread/cancel11.c: New test.
	* winsup.api/pthread/cancel12.c: Ditto.

2003-01-23  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Don't filter out -g.  Actually pass correct CFLAGS to
	site.exp.
	* winsup.api/winsup.exp: Use -g flag from CFLAGS.

2003-01-23  Christopher Faylor  <cgf@redhat.com>

	* Makefile.in: Turn off all optimizations.
	* libltp/lib/parse_opts.c (TEST_VALID_ENO): Move define outside of
	conditional.
	(TEST_ERRNO): Ditto.
	(btime): Ditto.
	(etime): Ditto.
	(tmptime): Ditto.
