@@ -2,10 +2,10 @@
 
 Here are some notes about adding and using this testsuite.
 
-First, all the programs are linked with new-libcygwin.a, which is just
-like libcygwin.a, except that it wants new-cygwin1.dll, not
+First, all the programs are linked with libcygwin0.a, which is just
+like libcygwin.a, except that it wants cygwin0.dll, not
 cygwin1.dll.  The testsuite adds the winsup build directory to the
-PATH so that new-cygwin1.dll can be found by windows during testing.
+PATH so that cygwin0.dll can be found by windows during testing.
 
 Because we'll probably run into complaints about using two DLLs, we
 run cygrun.exe for each test.  All this does is run the test with
