@@ -1,7 +1,7 @@
 proc winsup_version {} {
     global env
     global rootme
-    clone_output "\n[exec grep ^%%% $rootme/../cygwin/new-cygwin1.dll]\n"
+    clone_output "\n[exec grep ^%%% $rootme/../cygwin/cygwin0.dll]\n"
     if { [info exists env(CYGWIN)] } {
         clone_output "CYGWIN=$env(CYGWIN)\n"
     } else {
